--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body, html {
     padding: 200px;
 }
 
-.result {
+.result, .player, .computer{
     display: flex;
     background-color: lawngreen;
     border: solid black 2px;
