--- a/style.css
+++ b/style.css
@@ -27,9 +27,16 @@ h2 {
     margin: 0 0 30px 0;
 }
 
+h3 {
+    font-size: 40px;
+}
+
 .score {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     background-color: goldenrod;
-    width: 200px;
+    width: 300px;
     height: 100px;
     border: solid black 2px;
 }
@@ -45,4 +52,8 @@ h2 {
 .btn {
     padding: 50px 100px;
     font-size: 45px;
+}
+
+#resultText {
+    text-align: center;
 }
